vlib/v/checker/tests/arrow_op_wrong_left_type_err_b.out
vlib/v/checker/tests/arrow_op_wrong_left_type_err_b.vv:4:8: error: cannot assign to `obj`: expected `int`, not `string`
    2 |     ch := chan string{}
    3 |     mut obj := 9
    4 |     obj = <-ch
      |           ~~
    5 |     _ = obj
    6 | }
